fix: alignment on pet-card footer

--- a/frontend/src/components/cards/PetCard.css
+++ b/frontend/src/components/cards/PetCard.css
@@ -7,6 +7,7 @@
   gap: 1rem;
   background: white;
   margin: 1.5rem 0rem;
+  align-items: stretch;
 }
 
 /*LEFT OF CARD*/
